--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="imageavatar048.jpg"><img src="images/imageavatar048.jpg" alt="" width="70" height="70" class="img-circle" /></span>
+							<span class="imageavatar048.jpg"><img src="images/imageavatar048.jpg" alt="" width="70" height="70"/></span>
 							<h1 id="title">Heather W. Smith</h1>
 							<p>The College of Wooster Class of 2017</p>
 						</div>
