--- a/index.html
+++ b/index.html
@@ -137,12 +137,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I am a passionate, organized, and determined individual dedicating my life to social justice and equity. Throughout my college career I have been involved with Ultimate Frisbee, A Cappella, Campus Council, the Ohio Senior Classical League, and the National Senior Classical League. I have served in a leadership role in every organization I have been a part of and affected substantial, positive change. In my future I hope to transfer my personal and professional skills I have learned on a collegiate level to my career. </p>
 
 						</div>
 					</section>
