--- a/leadershipexp.html
+++ b/leadershipexp.html
@@ -101,7 +101,7 @@
 							<li>Maintain contact with constituents</li>
 							<li>Revise and amend Club Sports Manual for student organizations</li>
 							<li>Create procedure to review student organization charters to add to College Policy</li>
-							<li>Organize and facilitate public forum on judicial process
+							<li>Organized and facilitated public forum on judicial process
 							<br>
 							<br>
 
@@ -111,6 +111,7 @@
 							<br>
 							<li>Create and submit budget proposal to Campus Council Budget Committee</li>
 							<li>Manage funds received and disbursement forms</li>
+							<li>Collected dues and worked with members to create payments plans</li>
 
 							<br>
 							<h3>COWBelles, A Cappella Women's Ensemble</h3>
