I'm still trying the circle thing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="imageavatar048.jpg"><img src="images/imageavatar048.jpg" alt="" width="70" height="70"/></span>
+							<span class="imageavatar048.jpg">
+							<img src="images/imageavatar048.jpg" 
+							style=
+							alt="" 
+							width="70" 
+							height="70" 
+							border-radius=50%/>
+							</span>
 							<h1 id="title">Heather W. Smith</h1>
 							<p>The College of Wooster Class of 2017</p>
 						</div>
