--- a/leadershipexp.html
+++ b/leadershipexp.html
@@ -44,9 +44,9 @@
 
 							-->
 							<ul>
-								<li><a href="file:///Users/hsmith17/Documents/Year%204%20Sem%202/Digital%20Humanities/html5up-prologue/index.html#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="file:///Users/hsmith17/Documents/Year%204%20Sem%202/Digital%20Humanities/html5up-prologue/index.html#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
-								<li><a href="file:///Users/hsmith17/Documents/Year%204%20Sem%202/Digital%20Humanities/html5up-prologue/index.html#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href=index.html#top id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
+								<li><a href=index.html#portfolio id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
+								<li><a href=index.html#about id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
 							</ul>
 						</nav>
 
